--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,14 +107,97 @@
                     <div class="w-100 d-flex justify-content-center flex-column matches-images-container">
                         <img class="image-fluid position-absolute room-image top-0" src="/images/room.png" alt="Room Photo">
                         <div class="person-image-matches-container">
-                            <img class="profile-matches-picture rounded-circle image-fluid" src=" images/profile-pic.png " alt="Profile Picture ">
+                            <img class="profile-matches-picture rounded-circle image-fluid" src="https://m.media-amazon.com/images/M/MV5BMTk2MDQwODEwNV5BMl5BanBnXkFtZTcwNjc4MTY0NA@@._V1_UY317_CR17,0,214,317_AL_.jpg" alt="Profile Picture ">
                         </div>
                         <div class="person-info-matches-container p-1 w-100 d-flex flex-row ">
                             <div class="w-50 ps-3">
-                                <p class="h3 person-name-matches">Mário Vieira</p>
+                                <p class="h3 person-name-matches">Andy Bernard</p>
                             </div>
                             <div class="w-50 text-end pe-3">
-                                <p class="h5 person-location-matches">Praia da Vitória</p>
+                                <p class="h5 person-location-matches">Santa Cruz</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="body-container">
+                            <div class="w-50 mb-1 dropdown d-flex justify-content-center flex-row">
+                                <button id="dropdown-car-button" class="w-100 btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonRoom" data-bs-toggle="dropdown" aria-expanded="false">
+                                Car
+                            </button>
+                                <ul id="dropdown-menu-car" class="w-100 dropdown-menu drop-car" aria-labelledby="dropdownMenuButtonRoom">
+                                    <li><a class="dropdown-item" value="50">Limusine</a></li>
+                                    <li><a class="dropdown-item" value="50">Economy</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="w-100 d-flex justify-content-center">
+                            <div class="w-50">
+                                <p id="carPrice" class="h5">Car : 50$</p>
+                                <p id="roomPrice" class="h5">Room : 100$</p>
+                                <p id="totalPrice" class="h5">Total: 150$</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button class="w-50 btn btn-danger" click="addMatch()">Finish</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="card" class="card-matches card col-12 col-lg-2 rounded card shadow p-3 mb-5 bg-body ">
+                    <div class="w-100 d-flex justify-content-center flex-column matches-images-container">
+                        <img class="image-fluid position-absolute room-image top-0" src="/images/room.png" alt="Room Photo">
+                        <div class="person-image-matches-container">
+                            <img class="profile-matches-picture rounded-circle image-fluid" src="https://m.media-amazon.com/images/M/MV5BMjQzNDMwMjQ5OF5BMl5BanBnXkFtZTgwMTc5MTY1OTE@._V1_UY317_CR91,0,214,317_AL_.jpg" alt="Profile Picture ">
+                        </div>
+                        <div class="person-info-matches-container p-1 w-100 d-flex flex-row ">
+                            <div class="w-50 ps-3">
+                                <p class="h3 person-name-matches">Creed Bratton</p>
+                            </div>
+                            <div class="w-50 text-end pe-3">
+                                <p class="h5 person-location-matches">Santa Cruz</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-body">
+                        <div class="body-container">
+                            <div class="w-50 mb-1 dropdown d-flex justify-content-center flex-row">
+                                <button id="dropdown-car-button" class="w-100 btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonRoom" data-bs-toggle="dropdown" aria-expanded="false">
+                                Car
+                            </button>
+                                <ul id="dropdown-menu-car" class="w-100 dropdown-menu drop-car" aria-labelledby="dropdownMenuButtonRoom">
+                                    <li><a class="dropdown-item" value="50">Limusine</a></li>
+                                    <li><a class="dropdown-item" value="50">Economy</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="w-100 d-flex justify-content-center">
+                            <div class="w-50">
+                                <p id="carPrice" class="h5">Car : 100$</p>
+                                <p id="roomPrice" class="h5">Room : 50$</p>
+                                <p id="totalPrice" class="h5">Total: 150$</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button class="w-50 btn btn-danger" click="addMatch()">Finish</button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div id="card" class="card-matches card col-12 col-lg-2 rounded card shadow p-3 mb-5 bg-body ">
+                    <div class="w-100 d-flex justify-content-center flex-column matches-images-container">
+                        <img class="image-fluid position-absolute room-image top-0" src="/images/room.png" alt="Room Photo">
+                        <div class="person-image-matches-container">
+                            <img class="profile-matches-picture rounded-circle image-fluid" src="https://m.media-amazon.com/images/M/MV5BNDg2MTIxNzgzMV5BMl5BanBnXkFtZTcwMDUyOTY1Nw@@._V1_UY317_CR3,0,214,317_AL_.jpg" alt="Profile Picture ">
+                        </div>
+                        <div class="person-info-matches-container p-1 w-100 d-flex flex-row ">
+                            <div class="w-50 ps-3">
+                                <p class="h3 person-name-matches">Angela Martin</p>
+                            </div>
+                            <div class="w-50 text-end pe-3">
+                                <p class="h5 person-location-matches">Angra do Heroismo</p>
                             </div>
                         </div>
                     </div>
@@ -139,7 +222,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-center">
-                            <button class="w-50 btn btn-danger">Finish</button>
+                            <button class="w-50 btn btn-danger" click="addMatch()">Finish</button>
                         </div>
                     </div>
                 </div>
