Added more images

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,7 +146,7 @@
 
                 <div id="card" class="card-matches card col-12 col-lg-2 rounded card shadow p-3 mb-5 bg-body ">
                     <div class="w-100 d-flex justify-content-center flex-column matches-images-container">
-                        <img class="image-fluid position-absolute room-image top-0" src="/images/room.png" alt="Room Photo">
+                        <img class="image-fluid position-absolute room-image top-0" src="/images/elevator.jpeg" alt="Room Photo">
                         <div class="person-image-matches-container">
                             <img class="profile-matches-picture rounded-circle image-fluid" src="https://m.media-amazon.com/images/M/MV5BMjQzNDMwMjQ5OF5BMl5BanBnXkFtZTgwMTc5MTY1OTE@._V1_UY317_CR91,0,214,317_AL_.jpg" alt="Profile Picture ">
                         </div>
@@ -188,7 +188,7 @@
 
                 <div id="card" class="card-matches card col-12 col-lg-2 rounded card shadow p-3 mb-5 bg-body ">
                     <div class="w-100 d-flex justify-content-center flex-column matches-images-container">
-                        <img class="image-fluid position-absolute room-image top-0" src="/images/room.png" alt="Room Photo">
+                        <img class="image-fluid position-absolute room-image top-0" src="/images/storage-room.jpeg" alt="Room Photo">
                         <div class="person-image-matches-container">
                             <img class="profile-matches-picture rounded-circle image-fluid" src="https://m.media-amazon.com/images/M/MV5BNDg2MTIxNzgzMV5BMl5BanBnXkFtZTcwMDUyOTY1Nw@@._V1_UY317_CR3,0,214,317_AL_.jpg" alt="Profile Picture ">
                         </div>
